# dotfiles

./: .XCompose  .Xdefaults  .asoundrc  .dir_colors  .gitignore  .gitmodules  .inputrc  .zshenv
.config/: lesskey  user-dirs.dirs
.config/abook/: abookrc
.config/alacritty/: alacritty.yml  colors-dark.yml  colors-light.yml  zebra
.config/aria2/: .gitignore  aria2.conf  aria2cd.conf  upnp
.config/cmus/: .gitignore  papercolor-dark.theme  papercolor-light.theme  papercolor.theme  rc  status-display  zebra
.config/ctags/: exclude.ctags  languages.ctags
.config/environment.d/: 50-mail.conf  50-python.conf
.config/feh/: buttons  keys
.config/firefox/: user.js
.config/fontconfig/: fonts.conf
.config/foot/: foot.ini
.config/git/: .gitignore  zebra  (+6 more)
.config/nvim/pack/plugins/opt/colors.nvim/rust/: Cargo.toml  build.rs
.config/nvim/pack/plugins/opt/colors.nvim/rust/automata/: Cargo.toml
.config/nvim/pack/plugins/opt/colors.nvim/rust/automata/src/: automaton.rs  dfa.rs  lib.rs  nfa.rs  regex.rs
.config/nvim/pack/plugins/opt/colors.nvim/rust/data/: tailwind.csv  tailwind.js
.config/nvim/pack/plugins/opt/colors.nvim/rust/nvim/: Cargo.toml
.config/nvim/pack/plugins/opt/colors.nvim/rust/nvim/src/: lib.rs
.config/nvim/pack/plugins/opt/colors.nvim/rust/src/: api.rs  parser.rs  search.rs
.config/nvim/pack/plugins/opt/colors.nvim/rust/strlen/: Cargo.toml
.config/nvim/pack/plugins/opt/colors.nvim/rust/strlen/src/: lib.rs
.config/nvim/pack/plugins/opt/colors.nvim/rust/teddy/: Cargo.toml
.config/nvim/pack/plugins/opt/colors.nvim/rust/teddy/src/: lib.rs
(+768 files in other folders)
