[package]
name = "nvim-plugin-colors"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[workspace]
members = [
	"apca",
	"automata",
	"build",
	"nvim",
	"teddy",
]
resolver = "2"

[dependencies]
apca = { path = "apca" }
automata = { path = "automata" }
build = { path = "build" }
fast-float = "0.2"
nvim = { path = "nvim" }
palette = { version = "0.7.3", default-features = false, features = ["std"] }
teddy = { path = "teddy" }

[build-dependencies]
build = { path = "build" }

[profile.release]
strip = true
lto = true
debug = true
